tests/rosetta/out/Smalltalk/brazilian-numbers.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| sameDigits f isBrazilian b isPrime d main kinds kind c n |
Object subclass: #BreakSignal instanceVariableNames: '' classVariableNames: '' poolDictionaries: '' category: nil!.
sameDigits := [:n :b | f := (n % b).
n := (n / b) asInteger.
[(n > 0)] whileTrue: [.
((((n % b)) ~= f)) ifTrue: [
false.
] .
n := (n / b) asInteger.
].
.
true. ].
isBrazilian := [:n | ((n < 7)) ifTrue: [
false.
] .
((((((n % 2)) = 0)) and: [((n >= 8))])) ifTrue: [
true.
] .
b := 2.
[(b < ((n - 1)))] whileTrue: [.
(sameDigits value: n value: b) ifTrue: [
true.
] .
b := (b + 1).
].
.
false. ].
isPrime := [:n | ((n < 2)) ifTrue: [
false.
] .
((((n % 2)) = 0)) ifTrue: [
(n = 2).
] .
((((n % 3)) = 0)) ifTrue: [
(n = 3).
] .
d := 5.
[(((d * d)) <= n)] whileTrue: [.
((((n % d)) = 0)) ifTrue: [
false.
] .
d := (d + 2).
((((n % d)) = 0)) ifTrue: [
false.
] .
d := (d + 4).
].
.
true. ].
main := [ kinds := {' '. ' odd '. ' prime '}.
[.
kinds do: [:kind |.
Transcript show: ((((('First 20') + kind)) + ('Brazilian numbers:'))) printString; cr.
c := 0.
n := 7.
[.
[true] whileTrue: [.
(isBrazilian value: n) ifTrue: [
Transcript show: ((((n asString)) + (' '))) printString; cr.
c := (c + 1).
((c = 20)) ifTrue: [
Transcript show: '
'; cr.
BreakSignal signal.
] .
] .
((kind = (' '))) ifTrue: [
n := (n + 1).
] ifFalse: [
((kind = (' odd '))) ifTrue: [
n := (n + 2).
] ifFalse: [
[.
[true] whileTrue: [.
n := (n + 2).
(isPrime value: n) ifTrue: [
BreakSignal signal.
] .
].
] on: BreakSignal do: [:ex | ].
].
].
].
] on: BreakSignal do: [:ex | ].
].
] on: BreakSignal do: [:ex | ].
n := 7.
c := 0.
[(c < 100000)] whileTrue: [.
(isBrazilian value: n) ifTrue: [
c := (c + 1).
] .
n := (n + 1).
].
.
Transcript show: ((('The 100,000th Brazilian number: ') + (((n - 1) asString)))) printString; cr. ].
main value.
